<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="settings_category_ui_title">User interface</string>
    <string name="settings_category_general_title">General</string>
    <string name="settings_category_about_title">About</string>

    <string name="settings_pref_night_mode_title">Night mode</string>
    <string-array name="settings_pref_night_mode_entries">
        <item>Auto</item>
        <item>On</item>
        <item>Off</item>
    </string-array>
    <string-array name="settings_pref_night_mode_values" translatable="false">
        <item>auto</item>
        <item>yes</item>
        <item>no</item>
    </string-array>

    <string name="settings_pref_lock_templates_title">Prevent template editing</string>
    <string name="settings_pref_lock_templates_summary">
        Choose whether or not to show the template editor. Useful to prevent accidental edits from
        non-lead team members.
    </string>

    <string name="settings_pref_default_template_title">Default template</string>
    <string name="settings_pref_default_template_summary">%s\nChoose the default template for new scouts</string>
    <string name="settings_pref_default_template_name">[DEFAULT] %s</string>

    <string name="settings_pref_should_upload_to_tba_title">Upload media to The Blue Alliance</string>
    <string name="settings_pref_should_upload_to_tba_summary">
        %s\nChoose what happens when you take a picture with Robot Scouter
    </string>
    <string-array name="settings_pref_should_upload_to_tba_entries">
        <item>Ask every time</item>
        <item>@string/yes</item>
        <item>@string/no</item>
    </string-array>
    <string-array name="settings_pref_should_upload_to_tba_values" translatable="false">
        <item>ask</item>
        <item>yes</item>
        <item>no</item>
    </string-array>

    <string name="settings_pref_reset_prefs_title">Reset preferences and tutorials</string>

    <string name="settings_pref_link_account_title">Link accounts</string>
    <string name="settings_pref_link_account_summary">
        Migrate this account\'s data into a new account and link them if possible.
    </string>

    <string name="settings_pref_sign_out_title">Sign out</string>

    <string name="settings_pref_about_summary">
        Robot Scouter is developed with 💖 by <a href="https://github.com/SUPERCILEX">Alex Saveau</a>
        and the icon was designed by <a href="https://github.com/andrewda">Andrew Dassonville</a>.\n\nIf
        you want to try out new features before everyone else, feel free to join
        <a href="https://play.google.com/apps/testing/com.supercilex.robotscouter">the beta</a>.\n\nAlso,
        Robot Scouter is <a href="https://github.com/SUPERCILEX/Robot-Scouter">open-source</a>
        so please <a href="https://github.com/SUPERCILEX/Robot-Scouter/issues/new">file bugs and feature requests</a>!\n\nSignificant
        contributions:\n ● French translations provided by
        <a href="https://twitter.com/samgd14">Sami G.-D.</a> from team
        <a href="http://www.thebluealliance.com/team/6929">#6929</a>
    </string>

    <string name="settings_pref_release_notes_title">Release notes</string>
    <string name="settings_pref_release_notes_summary">View the latest release notes</string>

    <string name="settings_pref_translate_title">Help translate Robot Scouter</string>
    <string name="settings_pref_translate_summary">Know another language? Please help translate!</string>

    <string name="settings_pref_version_title">Version</string>
    <string name="settings_debug_info_title">Robot Scouter debug info</string>
    <string name="settings_debug_info_copied_message">Debug info copied to clipboard!</string>

    <string name="settings_pref_licenses_title">Licenses</string>
</resources>
